log
Fri 08 Sep 2023 07:40:02 AM UTC: 
 hashmap.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
367212e
Fri 08 Sep 2023 08:16:41 AM UTC: 
 hashmap.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:57:33: error: implicit declaration of function ‘_strdup’; did you mean ‘strdup’? [-Werror=implicit-function-declaration]
   57 |     Pair * newPair = createPair(_strdup(key), value);
      |                                 ^~~~~~~
      |                                 strdup
hashmap.c:57:33: error: passing argument 1 of ‘createPair’ makes pointer from integer without a cast [-Werror=int-conversion]
   57 |     Pair * newPair = createPair(_strdup(key), value);
      |                                 ^~~~~~~~~~~~
      |                                 |
      |                                 int
hashmap.c:19:27: note: expected ‘char *’ but argument is of type ‘int’
   19 | Pair * createPair( char * key,  void * value) {
      |                    ~~~~~~~^~~
test.c: At top level:
test.c:8:8: error: conflicting types for ‘_strdup’; have ‘char *(const char *)’
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
In file included from test.c:4:
hashmap.c:57:33: note: previous implicit declaration of ‘_strdup’ with type ‘int()’
   57 |     Pair * newPair = createPair(_strdup(key), value);
      |                                 ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f3f3a1a
Fri 08 Sep 2023 08:18:09 AM UTC: 
 hashmap.c | 28 +++++++++++++++++++---------
 1 file changed, 19 insertions(+), 9 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:62:33: error: implicit declaration of function ‘_strdup’; did you mean ‘strdup’? [-Werror=implicit-function-declaration]
   62 |     Pair * newPair = createPair(_strdup(key), value);
      |                                 ^~~~~~~
      |                                 strdup
hashmap.c:62:33: error: passing argument 1 of ‘createPair’ makes pointer from integer without a cast [-Werror=int-conversion]
   62 |     Pair * newPair = createPair(_strdup(key), value);
      |                                 ^~~~~~~~~~~~
      |                                 |
      |                                 int
hashmap.c:19:27: note: expected ‘char *’ but argument is of type ‘int’
   19 | Pair * createPair( char * key,  void * value) {
      |                    ~~~~~~~^~~
test.c: At top level:
test.c:8:8: error: conflicting types for ‘_strdup’; have ‘char *(const char *)’
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
In file included from test.c:4:
hashmap.c:62:33: note: previous implicit declaration of ‘_strdup’ with type ‘int()’
   62 |     Pair * newPair = createPair(_strdup(key), value);
      |                                 ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
89c5b62
Fri 08 Sep 2023 08:19:32 AM UTC: 
 hashmap.c | 30 ++++++++++--------------------
 1 file changed, 10 insertions(+), 20 deletions(-)
 tests:  5|4
total_score: 30/70
48644a7
Fri 08 Sep 2023 08:51:01 AM UTC: 
 hashmap.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
ab55be1
Fri 08 Sep 2023 10:51:19 AM UTC: 
 hashmap.c | 32 ++++++++++++++++++++++++++++++--
 1 file changed, 30 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 40/70
d003429
Fri 08 Sep 2023 10:54:25 AM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  9|3
total_score: 40/70
2f9d700
Fri 08 Sep 2023 10:57:04 AM UTC: 
 hashmap.c | 20 ++++++++++++++++++--
 1 file changed, 18 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:76:5: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   76 |     if (map->buckets == NULL)
      |     ^~
hashmap.c:78:9: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   78 |         map->capacity = old_capacity;
      |         ^~~
cc1: all warnings being treated as errors
Compilation failed
958ecc3
Fri 08 Sep 2023 10:58:12 AM UTC: 
 hashmap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  10|2
total_score: 50/70
d9e11fa
